[tool.poetry]
name = "proj-env"
version = "0.1.0"
description = ""
authors = ["yuliakryveiko <yuliakryveiko@gmail.com>"]
readme = "README.md"
packages = [{include = "proj_env"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
